Bug fixes for displaying page on safari

--- a/cypherpunk-com/src/app/components/footer/footer.component.scss
+++ b/cypherpunk-com/src/app/components/footer/footer.component.scss
@@ -50,7 +50,7 @@
 .footer-listing li {
   font-weight: 500;
   line-height: 1.69;
-  &.inline { display: inline; margin-right: 28px; }
+  &.inline { display: inline; margin-right: 15px; }
   &.inline:last-child { margin-right: 0; }
 
   img { height: 25px; }
