--- a/cypherpunk-com/src/app/layouts/public/apps/browser/browser.component.scss
+++ b/cypherpunk-com/src/app/layouts/public/apps/browser/browser.component.scss
@@ -118,6 +118,8 @@
     overflow: auto;
     margin: 0 0 50px;
 
+    img { max-width: 100%; }
+
     .left {
       width: 50%;
       float: left;
@@ -293,6 +295,7 @@
 
 @media (max-width: 400px) {
   .navigation li { padding: 10px 15px; font-size: 16px; }
+  .content .split img { padding: 0 10px; }
   .content {
     .button-container { margin: 0 10px 80px; }
     .content-inner .row .cell { width: 100%; margin-right: 0; }
